<resources>
    <string name="app_name">ListItUp</string>
    <string name="my_lists_button">My Lists</string>
    <string name="add_new_button">Add New</string>
    <string name="item_name">Item</string>
    <string name="shop_name">Shop</string>
    <string name="quantity">Quantity</string>
    <string name="ok">OK</string>
    <string name="shop_of_item">Shop of item</string>
    <string name="name_of_item">Name of item</string>
    <string name="how_much_of_the_item">How much of the item</string>
    <string name="bought">Bought!</string>
    <string name="dialog_title">Please enter item and details:</string>
    <string name="list_title1">My Shopping List</string>
    <string name="list_title2">I have already bought all of these!</string>
    <string name="show_map_button">Map</string>
    <string name="visit_shop_online">Visit Shop online</string>
    <string-array name="brew_array">
        <item>Choose shop</item>
        <item>Aldi</item>
        <item>Bilka</item>
        <item>Lidl</item>
        <item>Netto</item>
        <item>Rema1000</item>
    </string-array>

    <string name="title_activity_maps">Map</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="server_client_id">976335937508-u3cgfpugnf30nqnr8eo223vlu43hs0qq.apps.googleusercontent.com</string>

    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="welcome">Welcome back!</string>
    <string name="please_sing_in">Please sing in to continue</string>
    <string name="simple_sign_in">SIGN IN</string>
    <string name="google_sign_in">SIGN IN WITH GOOGLE</string>
    <string name="forgot_pw_text">Forgot password?</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="tab_text_cart">In Cart</string>
    <string name="tab_text_buy">To Buy</string>
    <string name="fab_content">Adding new element to the list</string>
    <string name="pieces">pcs</string>
    <string name="pounds_per_pc">£/pc</string>
    <string name="lets_buy_subtitle">LET\'S BUY...</string>
    <string name="in_my_cart_subtitle">IN MY CART...</string>
    <string name="preference_file_key">\"com.bignerdranch.android.listitup.PREFERENCE_FILE_KEY\"</string>
    <string name="pounds">£</string>
    <string name="use_this_list">Use this list</string>
    <string name="no_lists_text">You don\'t have any lists yet.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
