<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:layout_marginTop="5dp"
    android:textSize="32dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/item_photo"
                    android:layout_width="160dp"
                    android:layout_height="217dp"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:cropToPadding="true"
                    android:layout_marginRight="5dp"
                    android:scaleType="centerCrop" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_name"
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_of_item"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/item_quantity"
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:text="@string/how_much_of_the_item" />

                <TextView
                    android:id="@+id/item_shop"
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_of_item" />

            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <!-- <Spinner
                android:id="@+id/static_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp" />
            <CheckBox
                android:id="@+id/item_bought"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bought"/>
                -->

        <Button
            android:id="@+id/goToShop_button"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/visit_shop_online"
            android:textAllCaps="false"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/showMap_button"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textAllCaps="false"
            android:background="@color/colorPrimaryDark"
            android:textColor="#FFFFFF"
            android:layout_margin="5dp"
            android:text="@string/show_map_button" />

        <ImageButton
            android:id="@+id/photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimaryDark"
            android:src="@android:drawable/ic_menu_camera" />

    </LinearLayout>



</LinearLayout>